--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -77,6 +77,7 @@ main {
 }
 
 .btnPrimary {
+  box-sizing: border-box;
   width: 100%;
   padding: 0.75rem;
   border-radius: 8px;
